{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 45,
  "lineage": "44d090f2-19ee-494b-c5a2-29b21ab6bca4",
  "resources": [
    {
      "module": "module.auto-scaling.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:373986434526:loadbalancer/app/terraform-lesson4/191fe99a7fa9ffe6",
            "arn_suffix": "app/terraform-lesson4/191fe99a7fa9ffe6",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-lesson4-951630529.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:373986434526:loadbalancer/app/terraform-lesson4/191fe99a7fa9ffe6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-lesson4",
            "preserve_host_header": false,
            "security_groups": [
              "sg-083863acca98d43d1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0600afac893f81b44"
              },
              {
                "subnet_id": "subnet-09a0b5c2aab8d2427"
              },
              {
                "subnet_id": "subnet-0abffeced293b30e2"
              }
            ],
            "subnets": [
              "subnet-0600afac893f81b44",
              "subnet-09a0b5c2aab8d2427",
              "subnet-0abffeced293b30e2"
            ],
            "tags": {
              "Name": "terraform-lesson4"
            },
            "tags_all": {
              "Name": "terraform-lesson4"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0a0fb33af917dd708",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.db_sg.aws_security_group.security_group",
            "module.networking.module.lb_sg.aws_security_group.security_group",
            "module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.networking.module.vpc.aws_customer_gateway.this",
            "module.networking.module.vpc.aws_db_subnet_group.database",
            "module.networking.module.vpc.aws_default_network_acl.this",
            "module.networking.module.vpc.aws_default_route_table.default",
            "module.networking.module.vpc.aws_default_security_group.this",
            "module.networking.module.vpc.aws_default_vpc.this",
            "module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.networking.module.vpc.aws_flow_log.this",
            "module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_network_acl.database",
            "module.networking.module.vpc.aws_network_acl.elasticache",
            "module.networking.module.vpc.aws_network_acl.intra",
            "module.networking.module.vpc.aws_network_acl.outpost",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_network_acl.redshift",
            "module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.elasticache",
            "module.networking.module.vpc.aws_route_table.intra",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_route_table.redshift",
            "module.networking.module.vpc.aws_route_table_association.database",
            "module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.networking.module.vpc.aws_route_table_association.intra",
            "module.networking.module.vpc.aws_route_table_association.outpost",
            "module.networking.module.vpc.aws_route_table_association.private",
            "module.networking.module.vpc.aws_route_table_association.public",
            "module.networking.module.vpc.aws_route_table_association.redshift",
            "module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_subnet.elasticache",
            "module.networking.module.vpc.aws_subnet.intra",
            "module.networking.module.vpc.aws_subnet.outpost",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_subnet.redshift",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.networking.module.vpc.aws_vpn_gateway.this",
            "module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.networking.module.web_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.auto-scaling.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:373986434526:listener/app/terraform-lesson4/191fe99a7fa9ffe6/2d0d9c8bea301072",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:373986434526:targetgroup/web20220824071205526800000009/70e0d98fff7e1786",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:373986434526:listener/app/terraform-lesson4/191fe99a7fa9ffe6/2d0d9c8bea301072",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:373986434526:loadbalancer/app/terraform-lesson4/191fe99a7fa9ffe6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.auto-scaling.module.alb.aws_lb.this",
            "module.auto-scaling.module.alb.aws_lb_target_group.main",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.db_sg.aws_security_group.security_group",
            "module.networking.module.lb_sg.aws_security_group.security_group",
            "module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.networking.module.vpc.aws_customer_gateway.this",
            "module.networking.module.vpc.aws_db_subnet_group.database",
            "module.networking.module.vpc.aws_default_network_acl.this",
            "module.networking.module.vpc.aws_default_route_table.default",
            "module.networking.module.vpc.aws_default_security_group.this",
            "module.networking.module.vpc.aws_default_vpc.this",
            "module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.networking.module.vpc.aws_flow_log.this",
            "module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_network_acl.database",
            "module.networking.module.vpc.aws_network_acl.elasticache",
            "module.networking.module.vpc.aws_network_acl.intra",
            "module.networking.module.vpc.aws_network_acl.outpost",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_network_acl.redshift",
            "module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.elasticache",
            "module.networking.module.vpc.aws_route_table.intra",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_route_table.redshift",
            "module.networking.module.vpc.aws_route_table_association.database",
            "module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.networking.module.vpc.aws_route_table_association.intra",
            "module.networking.module.vpc.aws_route_table_association.outpost",
            "module.networking.module.vpc.aws_route_table_association.private",
            "module.networking.module.vpc.aws_route_table_association.public",
            "module.networking.module.vpc.aws_route_table_association.redshift",
            "module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_subnet.elasticache",
            "module.networking.module.vpc.aws_subnet.intra",
            "module.networking.module.vpc.aws_subnet.outpost",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_subnet.redshift",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.networking.module.vpc.aws_vpn_gateway.this",
            "module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.networking.module.web_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.auto-scaling.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:373986434526:targetgroup/web20220824071205526800000009/70e0d98fff7e1786",
            "arn_suffix": "targetgroup/web20220824071205526800000009/70e0d98fff7e1786",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:373986434526:targetgroup/web20220824071205526800000009/70e0d98fff7e1786",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "web20220824071205526800000009",
            "name_prefix": "web",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "web"
            },
            "tags_all": {
              "Name": "web"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0a0fb33af917dd708"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.networking.module.vpc.aws_customer_gateway.this",
            "module.networking.module.vpc.aws_db_subnet_group.database",
            "module.networking.module.vpc.aws_default_network_acl.this",
            "module.networking.module.vpc.aws_default_route_table.default",
            "module.networking.module.vpc.aws_default_security_group.this",
            "module.networking.module.vpc.aws_default_vpc.this",
            "module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.networking.module.vpc.aws_flow_log.this",
            "module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_network_acl.database",
            "module.networking.module.vpc.aws_network_acl.elasticache",
            "module.networking.module.vpc.aws_network_acl.intra",
            "module.networking.module.vpc.aws_network_acl.outpost",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_network_acl.redshift",
            "module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.elasticache",
            "module.networking.module.vpc.aws_route_table.intra",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_route_table.redshift",
            "module.networking.module.vpc.aws_route_table_association.database",
            "module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.networking.module.vpc.aws_route_table_association.intra",
            "module.networking.module.vpc.aws_route_table_association.outpost",
            "module.networking.module.vpc.aws_route_table_association.private",
            "module.networking.module.vpc.aws_route_table_association.public",
            "module.networking.module.vpc.aws_route_table_association.redshift",
            "module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_subnet.elasticache",
            "module.networking.module.vpc.aws_subnet.intra",
            "module.networking.module.vpc.aws_subnet.outpost",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_subnet.redshift",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.networking.module.vpc.aws_vpn_gateway.this",
            "module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.db_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:373986434526:security-group/sg-01aba1ed142e18f61",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01aba1ed142e18f61",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05719dc6f464c7373"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20220824071004172100000006",
            "name_prefix": "terraform-",
            "owner_id": "373986434526",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a0fb33af917dd708"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.lb_sg.aws_security_group.security_group",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.web_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.lb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:373986434526:security-group/sg-083863acca98d43d1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083863acca98d43d1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "terraform-20220824070954017100000004",
            "name_prefix": "terraform-",
            "owner_id": "373986434526",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a0fb33af917dd708"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a83da3917ad28e83",
            "association_id": "eipassoc-0c255ecc54db84309",
            "domain": "vpc",
            "id": "eipalloc-0a83da3917ad28e83",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0905c4649593c5bae",
            "private_dns": "ip-10-0-4-47.us-west-2.compute.internal",
            "private_ip": "10.0.4.47",
            "public_dns": "ec2-54-185-34-191.us-west-2.compute.amazonaws.com",
            "public_ip": "54.185.34.191",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform-lesson4-vpc-us-west-2a"
            },
            "tags_all": {
              "Name": "terraform-lesson4-vpc-us-west-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:373986434526:internet-gateway/igw-0608a43868d9a9e0d",
            "id": "igw-0608a43868d9a9e0d",
            "owner_id": "373986434526",
            "tags": {
              "Name": "terraform-lesson4-vpc"
            },
            "tags_all": {
              "Name": "terraform-lesson4-vpc"
            },
            "vpc_id": "vpc-0a0fb33af917dd708"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a83da3917ad28e83",
            "connectivity_type": "public",
            "id": "nat-0f022dffdcf3d9c2d",
            "network_interface_id": "eni-0905c4649593c5bae",
            "private_ip": "10.0.4.47",
            "public_ip": "54.185.34.191",
            "subnet_id": "subnet-0abffeced293b30e2",
            "tags": {
              "Name": "terraform-lesson4-vpc-us-west-2a"
            },
            "tags_all": {
              "Name": "terraform-lesson4-vpc-us-west-2a"
            }
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f3a7b906e299cc3d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f022dffdcf3d9c2d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f3a7b906e299cc3d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0608a43868d9a9e0d",
            "id": "r-rtb-0025a56ff6a61c7231080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0025a56ff6a61c723",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:373986434526:route-table/rtb-0f3a7b906e299cc3d",
            "id": "rtb-0f3a7b906e299cc3d",
            "owner_id": "373986434526",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f022dffdcf3d9c2d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-lesson4-vpc-private"
            },
            "tags_all": {
              "Name": "terraform-lesson4-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0fb33af917dd708"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:373986434526:route-table/rtb-0025a56ff6a61c723",
            "id": "rtb-0025a56ff6a61c723",
            "owner_id": "373986434526",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0608a43868d9a9e0d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-lesson4-vpc-public"
            },
            "tags_all": {
              "Name": "terraform-lesson4-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0fb33af917dd708"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a18ac28b808a0181",
            "route_table_id": "rtb-0f3a7b906e299cc3d",
            "subnet_id": "subnet-028008794d43e2fe6"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004d541c602163ff9",
            "route_table_id": "rtb-0f3a7b906e299cc3d",
            "subnet_id": "subnet-04f0527d6c6a2f609"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000d2447cfb337e4c",
            "route_table_id": "rtb-0f3a7b906e299cc3d",
            "subnet_id": "subnet-0b94c36ca1cf48a43"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f588dcb06c690e1",
            "route_table_id": "rtb-0f3a7b906e299cc3d",
            "subnet_id": "subnet-03aefa7333acea51d"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7845470bdeab49d",
            "route_table_id": "rtb-0f3a7b906e299cc3d",
            "subnet_id": "subnet-0ccfae29c73d21549"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f791a979410a550",
            "route_table_id": "rtb-0f3a7b906e299cc3d",
            "subnet_id": "subnet-0838c8c6b38f79719"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0386bb42489ec264e",
            "route_table_id": "rtb-0025a56ff6a61c723",
            "subnet_id": "subnet-0abffeced293b30e2"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069d7067b329a0e63",
            "route_table_id": "rtb-0025a56ff6a61c723",
            "subnet_id": "subnet-09a0b5c2aab8d2427"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0511a47f2a45b0cc5",
            "route_table_id": "rtb-0025a56ff6a61c723",
            "subnet_id": "subnet-0600afac893f81b44"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:373986434526:subnet/subnet-028008794d43e2fe6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028008794d43e2fe6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "373986434526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-lesson4-vpc-db-us-west-2a"
            },
            "tags_all": {
              "Name": "terraform-lesson4-vpc-db-us-west-2a"
            },
            "vpc_id": "vpc-0a0fb33af917dd708"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:373986434526:subnet/subnet-04f0527d6c6a2f609",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f0527d6c6a2f609",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "373986434526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-lesson4-vpc-db-us-west-2b"
            },
            "tags_all": {
              "Name": "terraform-lesson4-vpc-db-us-west-2b"
            },
            "vpc_id": "vpc-0a0fb33af917dd708"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:373986434526:subnet/subnet-0b94c36ca1cf48a43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b94c36ca1cf48a43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "373986434526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-lesson4-vpc-db-us-west-2c"
            },
            "tags_all": {
              "Name": "terraform-lesson4-vpc-db-us-west-2c"
            },
            "vpc_id": "vpc-0a0fb33af917dd708"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:373986434526:subnet/subnet-03aefa7333acea51d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03aefa7333acea51d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "373986434526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-lesson4-vpc-private-us-west-2a"
            },
            "tags_all": {
              "Name": "terraform-lesson4-vpc-private-us-west-2a"
            },
            "vpc_id": "vpc-0a0fb33af917dd708"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:373986434526:subnet/subnet-0ccfae29c73d21549",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ccfae29c73d21549",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "373986434526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-lesson4-vpc-private-us-west-2b"
            },
            "tags_all": {
              "Name": "terraform-lesson4-vpc-private-us-west-2b"
            },
            "vpc_id": "vpc-0a0fb33af917dd708"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:373986434526:subnet/subnet-0838c8c6b38f79719",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0838c8c6b38f79719",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "373986434526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-lesson4-vpc-private-us-west-2c"
            },
            "tags_all": {
              "Name": "terraform-lesson4-vpc-private-us-west-2c"
            },
            "vpc_id": "vpc-0a0fb33af917dd708"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:373986434526:subnet/subnet-0abffeced293b30e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abffeced293b30e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "373986434526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-lesson4-vpc-public-us-west-2a"
            },
            "tags_all": {
              "Name": "terraform-lesson4-vpc-public-us-west-2a"
            },
            "vpc_id": "vpc-0a0fb33af917dd708"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:373986434526:subnet/subnet-09a0b5c2aab8d2427",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a0b5c2aab8d2427",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "373986434526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-lesson4-vpc-public-us-west-2b"
            },
            "tags_all": {
              "Name": "terraform-lesson4-vpc-public-us-west-2b"
            },
            "vpc_id": "vpc-0a0fb33af917dd708"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:373986434526:subnet/subnet-0600afac893f81b44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0600afac893f81b44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "373986434526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-lesson4-vpc-public-us-west-2c"
            },
            "tags_all": {
              "Name": "terraform-lesson4-vpc-public-us-west-2c"
            },
            "vpc_id": "vpc-0a0fb33af917dd708"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:373986434526:vpc/vpc-0a0fb33af917dd708",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06a1abc23e8969b88",
            "default_route_table_id": "rtb-0475230a5c3310fae",
            "default_security_group_id": "sg-059be5d263554ddd5",
            "dhcp_options_id": "dopt-0b1ca59bfa539eb05",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a0fb33af917dd708",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0475230a5c3310fae",
            "owner_id": "373986434526",
            "tags": {
              "Name": "terraform-lesson4-vpc"
            },
            "tags_all": {
              "Name": "terraform-lesson4-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.web_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:373986434526:security-group/sg-05719dc6f464c7373",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05719dc6f464c7373",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-083863acca98d43d1"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220824070959078300000005",
            "name_prefix": "terraform-",
            "owner_id": "373986434526",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a0fb33af917dd708"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.lb_sg.aws_security_group.security_group",
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}